# ML_in_industriellen_Bildverarbeitung

./: .gitignore  README.md  pyproject.toml
exercises/01_unsupervised_learning/: exercise_1_1_kmeans.py  exercise_1_2_agglomerative.py  exercise_1_3_dbscan.py  exercise_1_4_gmm.py
exercises/02_supervised_learning/: exercise_2_1_lda.py  exercise_2_2_linear_svm.py  exercise_2_3_nonlinear_svm.py  exercise_2_4_rbf_svm.py  exercise_2_5_svr.py  exercise_2_6_tree_moons.py  exercise_2_7_tree_regression.py  exercise_2_8_ensembles.py  exercise_2_9_multiclass.py
exercises/03_semi_supervised_learning/: exercise_3_1_improve_semisupervised.py
exercises/04_data_management/: exercise_4_1_svc_persistence.py  exercise_4_2_pickle.py  exercise_4_3_skops.py
exercises/05_code_management/: exercise_5_1_clean_git.py  exercise_5_2_dynamic_pipeline.py  exercise_5_3_dvc_queue.py  exercise_5_4_dvc_plots.py  exercise_5_5_dvc_remote.py  params.yaml
exercises/06_data_etl/: exercise_6_1_etl_images.py  exercise_6_2_reproducible_accuracy.py
exercises/07_neural_networks/: exercise_7_1_parameters.md  exercise_7_1_parameters.py  exercise_7_2_summary_explanation.md  exercise_7_3_learning_rate_optimizer.py  exercise_7_4_change_optimizer.py  exercise_7_5_train_validation_split.py  exercise_7_6_train_with_softmax.py
exercises/08_convolutional_neural_networks/: exercise_8_1_convolution_shapes.md  exercise_8_2_pooling.py  exercise_8_3_cnn_cats_dogs.py
exercises/09_autoencoders/: exercise_9_1_transformations.py  exercise_9_2_latent_space.py
exercises/10_transfer_learning/: exercise_10_2_freeze.py  (+3 more)
(+28 files in other folders)
