[project]
name = "ml-industrielle-bildverarbeitung"
version = "0.1.0"
description = "Loesungen zu den Uebungen aus Maschinelles Lernen in der industriellen Bildverarbeitung"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
]

[tool.pdm]
distribution = false
