[project]
name = "ml-industrielle-bildverarbeitung"
version = "0.1.0"
description = "Loesungen zu den Uebungen aus Maschinelles Lernen in der industriellen Bildverarbeitung"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.60",
    "gitpython>=3.1",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "skops>=0.13",
    "scipy>=1.13",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]

[tool.pdm]
distribution = false
